[package]
name = "hololive-beat"
version = "0.1.0"
edition = "2021"

[package.metadata.namui]
targets = ["x86_64-pc-windows-msvc"]

[dependencies]
namui = { path = "../namui/namui" }
namui-prebuilt = { path = "../namui/namui-prebuilt" }

[profile.release]
lto = true
opt-level = 3

[profile.dev]
lto = true
opt-level = 3
