[package]
name = "cicd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
aws-config = "1.0.1"
aws-sdk-ec2 = "1.3.0"
aws-sdk-s3 = "1.4.0"
crc = "3.0.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.27"
tokio = "1.34.0"
