[package]
name = "for-all-projects"
version = "0.1.4"
edition = "2021"
license = "AGPL-3.0"
description = "A tool to run cargo commands for all projects in a directory, recursively."
repository = "https://github.com/namseent/namseent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["derive"] }
futures = "0.3.28"
ignore = "0.4.20"
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.7.6"

[build-dependencies]
clap = { version = "4.4.2", features = ["derive"] }
clap_complete = "4.4.0"
