[package]
edition = "2021"
name = "luda-adventure"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ecs-macro = {path = "./ecs-macro"}
namui = {path = "../namui"}
namui-prebuilt = {path = "../namui-prebuilt"}
once_cell = "1.15.0"
rustc-hash = "1.1.0"
serde = "1.0"
float-cmp = "0.9.0"

[dev-dependencies]
mockall = "0.11"
wasm-bindgen-test = "0.3.13"

[profile.release]
lto = true
opt-level = 3

[profile.dev]
lto = true
opt-level = 3
