[package]
edition = "2021"
name = "luda-adventure"
version = "0.1.0"

[package.metadata]
namui = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ecs-macro = { path = "./ecs-macro" }
namui = { path = "../namui/namui" }
namui-prebuilt = { path = "../namui/namui-prebuilt" }
once_cell = "1.15.0"
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
float-cmp = "0.9.0"
geo = { version = "0.23.0", features = ["use-serde"] }
ron = "0.8"

[dev-dependencies]
mockall = "0.11"
wasm-bindgen-test = "0.3.13"

[build-dependencies]
walkdir = "2"
quote = "1.0"

[profile.release]
lto = true
opt-level = 3

[profile.dev]
lto = true
opt-level = 3
