[package]
name = "namui-animation-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
namui = { path = "../namui" }
namui-prebuilt = { path = "../namui-prebuilt" }
downcast-rs = "1.2"
parking_lot = "0.12"

[dev-dependencies]
wasm-bindgen-test = "0.2"