[package]
name = "namui-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
futures = "0.3.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.72"
cargo_metadata = "0.11.0"
notify = "4.0.17"
tokio = { version = "1", features = ["full"] }
warp = "0.3.2"
nanoid = "0.4.0"
webbrowser = "0.5.5"