[package]
name = "namui-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cli_debug = []

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
futures = "0.3.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.72"
cargo_metadata = "0.11.0"
notify = "4.0.17"
tokio = { version = "1", features = ["full"] }
warp = "0.3.2"
nanoid = "0.4.0"
webbrowser = "0.5.5"
regex = "1.5.4"
wsl = "0.1.0"
fs_extra = "1.2.0"
namui-user-config = { path = "../namui-user-config" }
