[package]
name = "namui-drawer"
version = "0.1.0"
authors = ["namse <skatpgusskat@naver.com>"]
edition = "2021"

[package.metadata]
namui = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
namui-panic-hook = { path = "../namui-panic-hook" }
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"]  }
js-sys = "0.3.55"
wasm-bindgen-futures = "0.4.28"
serde = { version = "1.0.183", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
namui-type = { path = "../namui-type" }
namui-skia = { path = "../skia/skia" }
num = "0.4.1"
ordered-float = "3.7.0"
lru = "0.11.0"
lazy_static = "1.4.0"
once_cell = "1.18.0"
anyhow = "1.0.72"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
float-cmp = "0.9"

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlCanvasElement",
    "ImageBitmap",
]
