[package]
name = "namui-type"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
num = { version = "0.4.0", features = ["std"] }
ordered-float = "2.10"
auto_ops = "0.3"
