[package]
name = "namui"
version = "0.1.0"
authors = ["namse <skatpgusskat@naver.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"]  }
js-sys = "0.3.55"
wasm-bindgen-futures = "0.4.28"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
futures = "0.3.17"
lazy_static = "1.4.0"
once_cell = "1.8.0"
serde_repr = "0.1"
tokio = { version = "1", default-features = false, features = ["sync"] }
dashmap = "4"
num = { version = "0.4.0", features = ["std"] }
bincode = "1.3"
lru = "0.7"
ordered-float = "2.10"
namui-cfg = { path = "../namui-cfg" }
shader-macro = { path = "./shader-macro" }
parking_lot = "0.12"
auto_ops = "0.3"
url = { version = "2", features = ["serde"] }
percent-encoding = "2"
strum = "0.24"
strum_macros = "0.24"
nalgebra = { version = "0.31", features = ["serde-serialize"] }
reqwest = "0.11"
fluvio-wasm-timer = "0.2"
textwrap = "0.15"
unicode-segmentation = "1.9"
uuid = { version = "1.1", features = ["v4", "js", "macro-diagnostics", "serde"]}
siphasher = "0.3"
namui-type = { path = "../namui-type" }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
float-cmp = "0.9"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "console",
    "Performance",
    "MouseEvent",
    "KeyboardEvent",
    "WheelEvent",
    "BinaryType",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Crypto",
    "CssStyleDeclaration",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "InputEvent",
    "AddEventListenerOptions",
    "FileList",
    "HtmlImageElement",
    "Url",
    "ErrorEvent",
    "HtmlAnchorElement",
    "WritableStream",
    "WritableStreamDefaultWriter",
    "DragEvent",
    "DataTransfer",
    "DataTransferItemList",
    "DataTransferItem",
    "OffscreenCanvas",
]
