[package]
name = "namui"
version = "0.1.0"
authors = ["namse <skatpgusskat@naver.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"]  }
js-sys = "0.3.55"
wasm-bindgen-futures = "0.4.28"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
futures = "0.3.17"
lazy_static = "1.4.0"
once_cell = "1.8.0"
tokio = { version = "1", default-features = false, features = ["sync", "rt"] }
dashmap = "4"
num = { version = "0.4.0", features = ["std"] }
bincode = "1.3"
lru = "0.7"
ordered-float = "2.10"
namui-cfg = { path = "../namui-cfg" }
shader-macro = { path = "./shader-macro" }
hooks-macro = { path = "./hooks-macro" }
parking_lot = "0.12"
auto_ops = "0.3"
url = { version = "2", features = ["serde"] }
percent-encoding = "2"
strum = "0.24"
strum_macros = "0.24"
reqwest = "0.11"
fluvio-wasm-timer = "0.2"
textwrap = "0.15"
unicode-segmentation = "1.9"
namui-type = { path = "../namui-type" }
namui-skia = { path = "../skia/skia" }
serde-wasm-bindgen = "0.5.0"
anyhow = "1.0.72"
serde_bytes = "0.11.12"
derivative = "2.2.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
float-cmp = "0.9"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "console",
    "Performance",
    "MouseEvent",
    "KeyboardEvent",
    "WheelEvent",
    "BinaryType",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Crypto",
    "CssStyleDeclaration",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "InputEvent",
    "AddEventListenerOptions",
    "FileList",
    "HtmlImageElement",
    "Url",
    "ErrorEvent",
    "HtmlAnchorElement",
    "WritableStream",
    "WritableStreamDefaultWriter",
    "DragEvent",
    "DataTransfer",
    "DataTransferItemList",
    "DataTransferItem",
    "Blob",
    # "AudioContext",
    # "AudioBufferSourceNode",
    # "AudioBuffer",
    # "AudioDestinationNode",
    "HashChangeEvent",
]
