[package]
name = "namui"
version = "0.1.0"
authors = ["namse <skatpgusskat@naver.com>"]
edition = "2021"

[package.metadata]
namui = true

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
namui-type = { path = "../namui-type" }
lazy_static = "1.4.0"
url = { version = "2", features = ["serde"] }
anyhow = "1.0.72"
namui-cfg = { path = "../namui-cfg" }
shader-macro = { path = "./shader-macro" }
hooks-macro = { path = "./hooks-macro" }
serde = { version = "1.0", features = ["derive", "rc"] }
tokio = { version = "1", default-features = false, features = [
    "sync",
    "macros",
] }
namui-skia = { path = "../skia/skia" }
serde_json = "1.0"
percent-encoding = "2"

[target.'cfg(target_family="wasm")'.dependencies]
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "console",
    "Performance",
    "MouseEvent",
    "KeyboardEvent",
    "WheelEvent",
    "BinaryType",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Crypto",
    "CssStyleDeclaration",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "InputEvent",
    "AddEventListenerOptions",
    "FileList",
    "HtmlImageElement",
    "Url",
    "ErrorEvent",
    "HtmlAnchorElement",
    "WritableStream",
    "WritableStreamDefaultWriter",
    "DragEvent",
    "DataTransfer",
    "DataTransferItemList",
    "DataTransferItem",
    "Blob",
    # "AudioContext",
    # "AudioBufferSourceNode",
    # "AudioBuffer",
    # "AudioDestinationNode",
    "HashChangeEvent",
] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3.55"
wasm-bindgen-futures = "0.4.28"
futures = "0.3.17"
once_cell = "1.8.0"
tokio = { version = "1", default-features = false, features = ["sync"] }
dashmap = "4"
num = { version = "0.4.0", features = ["std"] }
bincode = "1.3"
lru = "0.7"
ordered-float = "2.10"
parking_lot = "0.12"
auto_ops = "0.3"
strum = "0.24"
strum_macros = "0.24"
reqwest = "0.11"
fluvio-wasm-timer = "0.2"
textwrap = "0.15"
unicode-segmentation = "1.9"
namui-type = { path = "../namui-type" }
serde-wasm-bindgen = "0.5.0"
serde_bytes = "0.11.12"
derivative = "2.2.0"
chumsky = "0.9.2"

[target.'cfg(target_family="wasm")'.dev-dependencies]
wasm-bindgen-test = "0.3.13"
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
float-cmp = "0.9"


[target.'cfg(not(target_family="wasm"))'.dependencies]
tokio = { version = "1", features = ["rt", "fs"] }
winit = "0.29.4"
windows = { version = "0.52.0", features = [
    "Win32",
    "Win32_Graphics",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Direct3D",
    "Win32_Foundation",
    "Win32_Graphics_Dxgi_Common",
] }
rfd = "0.12.1"
