[package]
name = "nrpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "4"
tokio = { version = "0.2", features = ["sync", "macros", "rt-threaded"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"