[package]
name = "nrpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "4"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tokio = { version = "1", default-features = false, features = ["sync"] }
futures = "0.3.19"

[dev-dependencies]
tokio-stream = "0.1.8"
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }