[package]
name = "tower-defense"
version = "0.1.0"
edition = "2024"

[package.metadata.namui]
targets = ["wasm32-wasi-web", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]

[dependencies]
anyhow = "1.0.98"
namui = { path = "../namui/namui" }
namui-prebuilt = { path = "../namui/namui-prebuilt" }
rand = { version = "0.8.5", features = ["alloc"] }

[build-dependencies]
twemoji-assets = "1.4.0"
image = "0.25.1"
rayon = "1.10.0"
resvg = "0.45.1"
namui = { path = "../namui/namui" }