[package]
name = "tower-defense"
version = "0.1.0"
edition = "2024"

[package.metadata.namui]
targets = ["wasm32-wasi-web", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]

[features]
default = ["debug-tools"]
debug-tools = []
simulator = ["dep:rusqlite", "dep:clap", "dep:rayon", "dep:serde", "dep:serde_json", "dep:indicatif", "dep:toml", "dep:crossterm", "dep:ratatui"]

[dependencies]
anyhow = "1.0.98"
namui = { path = "../namui/namui" }
namui-prebuilt = { path = "../namui/namui-prebuilt" }
rand = { version = "0.8.5", features = ["alloc"] }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
clap = { version = "4", features = ["derive"], optional = true }
rayon = { version = "1.10", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
toml = { version = "0.7", optional = true }
indicatif = { version = "0.17", optional = true }
crossterm = { version = "0.28", optional = true }
ratatui = { version = "0.29", optional = true }

[[bin]]
name = "td-simulator"
path = "src/bin/td_simulator.rs"
required-features = ["simulator"]

[[bin]]
name = "td-stats"
path = "src/bin/td_stats.rs"
required-features = ["simulator"]

[build-dependencies]
twemoji-assets = "1.4.0"
image = "0.25.1"
rayon = "1.10.0"
resvg = "0.45.1"

[patch.crates-io]
rayon = { git = "https://github.com/NamseEnt/rayon", branch = "v1.11.0-fork" }
rayon-core = { git = "https://github.com/NamseEnt/rayon", branch = "v1.11.0-fork" }
