[package]
name = "cicd-center"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
aws-config = "1.0.1"
aws-sdk-ec2 = "1.3.0"
aws-sdk-s3 = "1.4.0"
crc = "3.0.1"
futures = "0.3.29"
lazy_static = "1.4.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.27"
tokio = { version = "1.34.0", features = ["rt", "full"] }
tokio-stream = { version = "0.1.14", features = ["fs"] }
