[package]
name = "rust-helper-extension"
version = "0.1.0"
authors = ["namse <skatpgusskat@naver.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.71"
proc-macro2 = { version = "1.0.64", features = ["span-locations"] }
quote = "1.0.29"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.100"
syn = { version = "2.0.24", features = ["full", "visit-mut", "visit"] }
wasm-bindgen = "0.2.87"

[profile.release]
lto = true
opt-level = 3

[profile.dev]
lto = true
opt-level = 2
