[package]
name = "hololive-beat"
version = "0.1.0"
edition = "2021"

[package.metadata.namui]
targets = ["x86_64-pc-windows-msvc", "x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.29"
keyframe = "1.1.1"
namui = { path = "../../namui/namui" }
namui-prebuilt = { path = "../../namui/namui-prebuilt" }
rand = "0.8.5"
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.30"

[profile.release]
lto = true
opt-level = 3

[profile.dev]
lto = true
opt-level = 3
