[package]
name = "luda-editor-client"
version = "0.1.0"
authors = ["namse <skatpgusskat@naver.com>"]
edition = "2021"

[package.metadata]
namui = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
namui = { path = "../../namui" }
namui-prebuilt = { path = "../../namui-prebuilt" }
rpc = { path = "../rpc", features = ["client"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.13"
revert-json-patch = { path = "../revert-json-patch" }
futures = "0.3.17"
unicode-normalization = "0.1"
crc32fast = "1.3"
tokio = { version = "1.28.2", features = ["sync"] }
anyhow = "1.0.71"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
mockall = "0.11"

[profile.release]
lto = true
opt-level = 3

[profile.dev]
lto = true
opt-level = 3
