[package]
name = "editor-core"
version = "0.0.1"
authors = ["namse <skatpgusskat@naver.com>"]
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
namui = { path = "../../namui" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
once_cell = "1.8.0"
base64 = "0.13.0"
namui-prebuilt = { path = "../../namui-prebuilt" }
lru = "0.7"
yrs = "0.11"
downcast-rs = "1.2"
crdt = { path = "../crdt" }
mockall = "0.11"
mockall_double = "0.3"
fluvio-wasm-timer = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
