[package]
name = "editor-core"
version = "0.0.1"
authors = ["namse <skatpgusskat@naver.com>"]
edition = "2021"

[dependencies]
namui = { path = "../../namui" }
namui-prebuilt = { path = "../../namui-prebuilt" }
rpc = { path = "../rpc", features = ["client"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
once_cell = "1.8.0"
base64 = "0.13.0"
lru = "0.7"
yrs = "0.11"
downcast-rs = "1.2"
crdt = { path = "../crdt" }
mockall = "0.11"
mockall_double = "0.3"
fluvio-wasm-timer = "0.2"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
