[package]
name = "crdt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-macro = { path = "./derive-macro" }
yrs = "0.11"
lib0 = { version = "0.11", features = ["lib0-serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
