[package]
name = "import"
version = "0.1.0"
edition = "2021"

[lib]
name = "import"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
include_dir = "0.7.3"
psd = { path = "../psd" }
rayon = "1.7.0"
rpc = { path = "../rpc", features = ["server"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
namui-type = { path = "../../namui-type" }
image = "0.24.6"
opencv = "0.86.1"
dhash = "0.1.0"
dssim = "3.2.4"
imgref = "1.9.4"
rgb = "0.8.36"
crc32fast = "1.3.2"
server-core = { version = "0.1.0", path = "../server/server-core" }
