[package]
name = "luda-editor-client"
version = "0.1.0"
authors = ["namse <skatpgusskat@naver.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4.28"
chrono = "0.4"
namui = { path = "../../namui" }
futures = "0.3.19"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
dashmap = "4"
tokio = { version = "1", default-features = false, features = ["sync"] }
async-trait = "0.1"
js-sys = "0.3.55"
tokio-stream = { version = "0.1.8", default-features = false }
luda-editor-rpc = { path = "../luda-editor-rpc" }
num = "0.4.0"
once_cell = "1.8.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
lto = true
opt-level = 3

[profile.dev]
lto = true
opt-level = 2

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "console",
    "Performance",
    "MouseEvent",
    "KeyboardEvent",
    "BinaryType",
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    "Crypto",
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
]