[package]
name = "luda-editor-client"
version = "0.1.0"
authors = ["namse <skatpgusskat@naver.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4.28"
chrono = "0.4"
namui = { path = "../../namui" }
futures = "0.3.19"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
bincode = "1.3"
dashmap = "4"
tokio = { version = "1", default-features = false, features = ["sync", "time"] }
async-trait = "0.1"
js-sys = "0.3.55"
tokio-stream = { version = "0.1.8", default-features = false }
num = "0.4.0"
once_cell = "1.8.0"
auto_ops = "0.3"
ordered-float = "2.10"
linked-hash-map = { version = "0.5.4", features = ["serde_impl"] }
base64 = "0.13.0"
async-recursion = "1.0.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
mockall = "0.11"

[profile.release]
lto = true
opt-level = 3

[profile.dev]
lto = true
opt-level = 2

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "console",
    "Performance",
    "MouseEvent",
    "KeyboardEvent",
    "BinaryType",
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'RequestCache',
    'Response',
    "Crypto",
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
]