[package]
name = "luda-editor-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", default-features = false, features = ["full"] }
warp = "0.3"
luda-editor-rpc = { path = "../luda-editor-rpc" }
futures = "0.3"
path-clean = "0.1.0"