[package]
name = "luda-editor-client"
version = "0.1.0"
authors = ["namse <skatpgusskat@naver.com>"]
edition = "2021"

[package.metadata]
namui = true

[dependencies]
namui = { path = "../../namui/namui" }
namui-prebuilt = { path = "../../namui/namui-prebuilt" }
serde = { version = "1.0.203", features = ["derive"] }
luda-rpc = { path = "../new-server/rpc" }
serializer = { path = "../new-server/serializer" }
dashmap = "6.0.1"
serde_json = "1.0.125"
psd-sprite = { version = "0.1.0", path = "../psd-sprite" }
psd-sprite-render = { version = "0.1.0", path = "../psd-sprite-render" }
