[package]
name = "nimg"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
bincode = "1.3.3"
serde = { version = "1.0.209", features = ["derive"] }
zstd = "0.13.2"
zune-jpeg = "0.4.13"

[target.'cfg(target_feature = "avx2")'.dependencies]
jpeg-encoder = { version = "0.6.0", features = ["simd"] }

[target.'cfg(not(target_feature = "avx2"))'.dependencies]
jpeg-encoder = { version = "0.6.0" }
